syntax = "proto3";

package book;


message Book {
  string id = 1;
  string title = 2;
  string description = 3;

}

message GetBookRequest {
  string book_id = 1;
}

message GetBookResponse {
  Book notif = 1;
}





service BookService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);

}
